--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ background:rgba(205, 203, 203, 0.5);
   border-radius: 5px;
   overflow: hidden;
   margin-top: 20px;
+  max-height: 40px;
 }
 
 #scroll-text {
