--- a/style.css
+++ b/style.css
@@ -31,12 +31,22 @@ background:rgba(205, 203, 203, 0.5);
   margin-left: auto;
   margin-right: auto;
 }
-.title{
+.titleWrapper {
   font-size: 60px;
   text-decoration: underline;
   text-underline-offset: 17px;
+  background: linear-gradient(to right, red, orange, yellow, green,blue , indigo, violet);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate 25s linear infinite;
 
 }
+@keyframes animate{
+  to{
+      background-position: 4500vh;
+  }
+  }
 .message{
 
 
