--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ background:rgba(205, 203, 203, 0.5);
 
 }
 
+#search-form{
+  margin-top: 30px;
+  margin-bottom: 35px;
+}
+
 @keyframes animate{
   to{
       background-position: 4500vh;
@@ -65,6 +70,8 @@ background:rgba(205, 203, 203, 0.5);
   .footer{
     padding: 0px;
     margin-top: auto;
+    position: fixed;
+    bottom: 0;
   }
 
 
