--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ background:rgba(205, 203, 203, 0.5);
 }
 
 #pageTitle{
-  font-size: 60px;
+  font-size: 125px;
 
 }
 
@@ -51,21 +51,21 @@ background:rgba(205, 203, 203, 0.5);
   margin-bottom: 35px;
 }
 
+.red {
+  font-weight: bolder;
+}
+
+.green {
+ font-weight: bolder;
+}
+
+
+
 @keyframes animate{
   to{
       background-position: 4500vh;
   }
   }
-.message{
-
-
-}
-#volume, #performance, #price{
-
-}
-
-
-
 
   .footer{
     padding: 0px;
@@ -99,13 +99,13 @@ background:rgba(205, 203, 203, 0.5);
 /* for Firefox */
 @-moz-keyframes my-animation {
   from { -moz-transform: translateX(100%); }
-  to { -moz-transform: translateX(-250%); }
+  to { -moz-transform: translateX(-110%); }
 }
 
 /* for Chrome */
 @-webkit-keyframes my-animation {
   from { -webkit-transform: translateX(100%); }
-  to { -webkit-transform: translateX(-250%); }
+  to { -webkit-transform: translateX(-110%); }
 }
 
 @keyframes my-animation {
@@ -115,9 +115,9 @@ background:rgba(205, 203, 203, 0.5);
     transform: translateX(100%);
   }
   to {
-    -moz-transform: translateX(-250%);
-    -webkit-transform: translateX(-250%);
-    transform: translateX(-250%);
+    -moz-transform: translateX(-110%);
+    -webkit-transform: translateX(-110%);
+    transform: translateX(-110%);
   }
 }
 
@@ -125,130 +125,21 @@ background:rgba(205, 203, 203, 0.5);
 /* MAX WIDTH 1350 PX */
 
 @media only screen and (max-width: 1350px) {
-  #scroll-text {
-    font-size: 24px;
-    /* animation properties */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-  }
-  
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(100%); }
-    to { -moz-transform: translateX(-325%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(100%); }
-    to { -webkit-transform: translateX(-325%); }
-  }
-  
-  @keyframes my-animation {
-    from {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-    to {
-      -moz-transform: translateX(-325%);
-      -webkit-transform: translateX(-325%);
-      transform: translateX(-325%);
-    }
-  }
+
 }
 
 
-/* MAX WIDTH 1000 PX */
+/* MAX WIDTH 950 PX */
 
 @media only screen and (max-width: 950px){
-  #scroll-text {
-    font-size: 24px;
-    /* animation properties */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-  }
-  
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(100%); }
-    to { -moz-transform: translateX(-370%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(100%); }
-    to { -webkit-transform: translateX(-370%); }
-  }
-  
-  @keyframes my-animation {
-    from {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-    to {
-      -moz-transform: translateX(-370%);
-      -webkit-transform: translateX(-370%);
-      transform: translateX(-370%);
-    }
-  }
+
 }
 
 
 /* MAX WIDTH 768 PX */
 
 @media only screen and (max-width: 768px){
-  .dropdown{
-    width: 100%;
-    justify-content: center;}
 
-    #scroll-text {
-      font-size: 24px;
-      /* animation properties */
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-      
-      -moz-animation: my-animation 15s linear infinite;
-      -webkit-animation: my-animation 15s linear infinite;
-      animation: my-animation 15s linear infinite;
-    }
-    
-    /* for Firefox */
-    @-moz-keyframes my-animation {
-      from { -moz-transform: translateX(100%); }
-      to { -moz-transform: translateX(-480%); }
-    }
-    
-    /* for Chrome */
-    @-webkit-keyframes my-animation {
-      from { -webkit-transform: translateX(100%); }
-      to { -webkit-transform: translateX(-480%); }
-    }
-    
-    @keyframes my-animation {
-      from {
-        -moz-transform: translateX(100%);
-        -webkit-transform: translateX(100%);
-        transform: translateX(100%);
-      }
-      to {
-        -moz-transform: translateX(-480%);
-        -webkit-transform: translateX(-480%);
-        transform: translateX(-480%);
-      }
-    }
 }
 
 
@@ -256,42 +147,7 @@ background:rgba(205, 203, 203, 0.5);
 
 
 @media only screen and (max-width: 600px){
-  #scroll-text {
-    font-size: 24px;
-    /* animation properties */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-  }
-  
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(100%); }
-    to { -moz-transform: translateX(-640%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(100%); }
-    to { -webkit-transform: translateX(-640%); }
-  }
-  
-  @keyframes my-animation {
-    from {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-    to {
-      -moz-transform: translateX(-640%);
-      -webkit-transform: translateX(-640%);
-      transform: translateX(-640%);
-    }
-  }
+
 }
 
 
@@ -299,40 +155,5 @@ background:rgba(205, 203, 203, 0.5);
 
 
 @media only screen and (max-width: 450px) {
-  #scroll-text {
-    font-size: 24px;
-    /* animation properties */
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-  }
-  
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(100%); }
-    to { -moz-transform: translateX(-800%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(100%); }
-    to { -webkit-transform: translateX(-800%); }
-  }
-  
-  @keyframes my-animation {
-    from {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
-    to {
-      -moz-transform: translateX(-800%);
-      -webkit-transform: translateX(-800%);
-      transform: translateX(-800%);
-    }
-  }
+
 }
