--- a/style.css
+++ b/style.css
@@ -60,6 +60,13 @@ background:rgba(205, 203, 203, 0.5);
 }
 
 
+#modal-x-btn{
+  position: absolute;
+  top: 5px;
+  right: 3px;
+
+}
+
 
 @keyframes animate{
   to{
