--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ background:rgba(205, 203, 203, 0.5);
 
 #search-form{
   margin-top: 30px;
-  margin-bottom: 35px;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .red {
