--- a/style.css
+++ b/style.css
@@ -54,10 +54,12 @@ background:rgba(205, 203, 203, 0.5);
 
 .red {
   font-weight: bolder;
+  color: red;
 }
 
 .green {
  font-weight: bolder;
+ color: green;
 }
 
 
