--- a/style.css
+++ b/style.css
@@ -32,13 +32,16 @@ background:rgba(205, 203, 203, 0.5);
   margin-right: auto;
 }
 .titleWrapper {
-  text-decoration: underline;
-  text-underline-offset: 17px;
   background: linear-gradient(to right, red, orange, yellow, green,blue , indigo, violet);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: animate 100s linear infinite;
+}
+@keyframes animate{
+  to{
+      background-position: -4500vh;
+  }
 }
 
 #pageTitle{
@@ -50,6 +53,14 @@ background:rgba(205, 203, 203, 0.5);
   margin-top: 30px;
   margin-left: 25%;
   margin-right: 25%;
+}
+
+#contact-us{
+  font-size: 20px;
+}
+
+h1{
+  font-size: 32px;
 }
 
 #box-format{
@@ -82,11 +93,6 @@ font-size: 20px;
 }
 
 
-@keyframes animate{
-  to{
-      background-position: 4500vh;
-  }
-  }
 
   .footer{
     padding: 0px;
@@ -98,7 +104,6 @@ font-size: 20px;
 
 #scroll-container {
   border: 3px solid black;
-  border-radius: 5px;
   overflow: hidden;
   white-space: nowrap;
   margin-top: 20px;
