adjusted background, made boxes match center of title gradient, made search bar placeholder and button search text bold

--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body{
 }
 
 .card {
-  background: rgba(228, 164, 96, 0.5)!important;
+  background: rgba(102, 245, 238, 0.5)!important;
   border-radius: 0.70rem;
   box-shadow: 10px 5px 5px rgb(15, 15, 15);
 }
 .hero-body{
-  background: linear-gradient(to left, rgb(217, 16, 16),rgb(217, 81, 17), rgb(220, 174, 11));
+  background: linear-gradient(to left, rgba(91, 180, 231, 0.5),rgb(102, 245, 238, 0.5), rgb(53, 167, 123));
   
 }
  .button{
@@ -49,10 +49,19 @@ background:rgba(205, 203, 203, 0.5);
 
 }
 
+.input::-webkit-input-placeholder {
+  color: rgb(41, 39, 39);
+  font-weight: bold;
+}
+
 #search-form{
   margin-top: 30px;
   margin-left: 25%;
   margin-right: 25%;
+}
+
+#search-btn{
+  font-weight: bold;
 }
 
 #contact-us{
