--- a/style.css
+++ b/style.css
@@ -54,6 +54,14 @@ background:rgba(205, 203, 203, 0.5);
   font-weight: bold;
 }
 
+.ui-autocomplete {
+  border: 1px solid slategray;
+  max-width: 25%;
+  background-color: rgb(237, 233, 94);
+}
+
+
+
 #search-form{
   margin-top: 30px;
   margin-left: 25%;
