--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ background:rgba(205, 203, 203, 0.5);
   border: 1px solid slategray;
   max-width: 25%;
   background-color: rgb(237, 233, 94);
+  max-height: 150px;
+  overflow-y: auto;
+            /* prevent horizontal scrollbar */
+  overflow-x: hidden;
+            /* add padding to account for vertical scrollbar */
+  padding-right: 20px;
 }
 
 
