adding title animation back

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ background:rgba(205, 203, 203, 0.5);
   margin-right: auto;
 }
 .titleWrapper {
-  /*background: linear-gradient(to right, red, orange, yellow, green,blue , indigo, violet);
+  background: linear-gradient(to right, red, orange, yellow, green,blue , indigo, violet);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -43,7 +43,7 @@ background:rgba(205, 203, 203, 0.5);
   to{
       background-position: -2500vh;
   }
-  */
+  
 }
 
 
