--- a/style.css
+++ b/style.css
@@ -157,9 +157,9 @@ font-size: 20px;
   font-size: 24px;
   font-weight: bold;
   /* animation properties */
-  -moz-transform: translateX(100%);
+  /* -moz-transform: translateX(100%);
   -webkit-transform: translateX(100%);
-  transform: translateX(100%);
+  transform: translateX(100%); */
   
   -moz-animation: my-animation 25s linear infinite;
   -webkit-animation: my-animation 25s linear infinite;
@@ -168,26 +168,26 @@ font-size: 20px;
 
 /* for Firefox */
 @-moz-keyframes my-animation {
-  from { -moz-transform: translateX(100%); }
-  to { -moz-transform: translateX(-110%); }
+  from { -moz-transform: translateX(40%); }
+  to { -moz-transform: translateX(-95%); }
 }
 
 /* for Chrome */
 @-webkit-keyframes my-animation {
-  from { -webkit-transform: translateX(100%); }
-  to { -webkit-transform: translateX(-110%); }
+  from { -webkit-transform: translateX(40%); }
+  to { -webkit-transform: translateX(-95%); }
 }
 
 @keyframes my-animation {
   from {
-    -moz-transform: translateX(100%);
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
+    -moz-transform: translateX(40%);
+    -webkit-transform: translateX(40%);
+    transform: translateX(40%);
   }
   to {
-    -moz-transform: translateX(-110%);
-    -webkit-transform: translateX(-110%);
-    transform: translateX(-110%);
+    -moz-transform: translateX(-95%);
+    -webkit-transform: translateX(-95%);
+    transform: translateX(-95%);
   }
 }
 
