made small adjustments to style

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body{
   min-height: 100vh;
-  background-color: rgb(181, 178, 178);
+  background-color: rgba(181, 178, 178, 0.438);
 }
 
 .card {
@@ -92,6 +92,7 @@ background:rgba(205, 203, 203, 0.5);
 
 #contact-us{
   font-size: 20px;
+  font-weight: bold;
 }
 
 h1{
@@ -120,7 +121,10 @@ font-size: 20px;
  font-weight: bolder;
  color: green;
 }
-
+ 
+#disclaimer{
+  font-size: 20px;
+}
 
 #modal-x-btn{
   position: absolute;
@@ -138,6 +142,10 @@ font-size: 20px;
 
 .modal-background {
   padding: auto;
+}
+
+.modal-content{
+ background-color:  rgb(102, 245, 238)!important;
 }
 
 
