--- a/style.css
+++ b/style.css
@@ -100,6 +100,13 @@ h1{
   font-weight: bold;
 }
 
+#right-box-title{
+margin-top: 35px;
+}
+
+#left-box-title{
+  margin-top: 35px;
+}
 #box-format{
   font-size: 20px;
 }
