--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ background:rgba(205, 203, 203, 0.5);
             /* add padding to account for vertical scrollbar */
   padding-right: 20px;
 }
+.ui-autocomplete::-webkit-scrollbar{
+  display: none;
+}
 
 .ui-helper-hidden-accessible {
   display: none;
