--- a/style.css
+++ b/style.css
@@ -319,6 +319,12 @@ h1 {
     max-width: 41%;
   }
 
+  #search-form{
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 0;
+  }
+
 }
 
 @media only screen and (max-width: 675px) {
@@ -373,7 +379,9 @@ h1 {
     max-width: 35%;
   }
 
-  #new-coin {
-    font-size: 12px;
+  
+  #new-coin::placeholder {
+    font-size: 16px;
   }
+
 }
